# Dish2Macro

./: CMakeLists.txt  Dish2Macro.cfg  Dish2Macro.ini  LICENSE  README.md  ini.h  main.cpp
